# raven-the-embedder

./: .gitignore  README.md  Settings.py  api.py  dataretrieve.py  datasetloader.py  embedding_pipeline.py  flattenformater.py  helpers.py  main.py  models.py  pika_worker.py  pyproject.toml  qdrant.py  transformer.py
scripts/: bootstrap.sh
