[project]
name = "raven-the-embedder"
version = "0.1.0"
description = "Raven – The Embedder: A modular embedding component for transforming text and image data into vectors to enable efficient and accurate retrieval."
authors = [
    {name = "Ali Baghernejad", email = "alibaghernezhad@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "jupyter>=1.1.1,<2.0.0",
    "qdrant-client>=1.13.6,<1.15.0",
    "fastembed>=0.7.1,<0.8.0",
    "datasets>=4.0.0,<5.0.0",
    "ranx>=0.3.20,<0.4.0",
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "celery>=5.3.6,<6.0.0",
    "minio>=7.2.5,<8.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "langchain>=0.3.27",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pika (>=1.3.2,<2.0.0)",
    "unstructured[docx,pdf] (>=0.18.11,<0.19.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "transformers (>=4.54.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false